--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1><span>10</span> <span>web</span> <span>game</span>  <span>ideas</span></h1>
             <button></button>
             <p>Created by Ivan Gamez</p>
+            <p>Example</p>
         </div>
     </div>
 </body>
