--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Jersey+25&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/style.css">
+    7
     <title>10 Web game ideas</title>
 </head>
 <body>
     <div class="first-background">
         <div class="main-background">
-            <h1><span>10</span> <span>web</span> <span>game</span>  <span>ideas</span></h1>
-            <button></button>
+            <h1><span>10</span> <span>web</span> <span>game</span>  <span class="idea-word">ideas</span></h1>
             <p>Created by Ivan Gamez</p>
-            <p>Example</p>
+            <button><i class="fa-regular fa-circle-down" style="color: #ffffff;"></i></button>
+        </div>
+    </div>
+    <div class="first-background">
+        <div class="main-background">
+            <h1><span>10</span> <span>web</span> <span>game</span>  <span class="idea-word">ideas</span></h1>
+            <p>Created by Ivan Gamez</p>
+            <button></button>
         </div>
     </div>
 </body>
