--- a/Ejercicio2/SemaforoGame.html
+++ b/Ejercicio2/SemaforoGame.html
@@ -7,13 +7,15 @@
     <title>Juego del Semaforo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="background"></div>
-    <button id="back-button" class="back-button">Back</button>
+    <button  id="back-button" class="back-button"><a href="../index.html">Back</a></button>
 
     <h1>Guess the number</h1>
 
@@ -44,7 +46,7 @@
         <p><span>Red:</span> There is a difference of less than 50 numbers</p>
         <p><span>Yellow:</span> There is a difference of less than 30 numbers</p>
         <p><span>Green:</span> There is a difference of less than or equal to 10</p>
-        
+
     </section>
 
     <p class="credits">Created by Ivan Gamez</p>
