--- a/Ejercicio3/CardGuesser.html
+++ b/Ejercicio3/CardGuesser.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game: Guess the next card</title>
+    <title>Game: Guess the next card</title>    
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    <h1>Card fortune teller</h1>
-    <h2>Instructions:</h2>
-    <p>A card will be shown later, you have to guess if that card is higher or lower than the previous one. You win if you guess 10 cards consecutively without making a mistake, remember the cards cannot be repeated.</p>
-    <script src="app.js"></script>
+    <main class = "main-background">
+        <h1>Card fortune teller</h1>
+        <h2>Instructions:</h2>
+        <p>A card will be shown later, you have to guess if that card is higher or lower than the previous one. You win if you guess 10 cards consecutively without making a mistake, remember the cards cannot be repeated.</p>
+        <script src="app.js"></script>
+    </main>
+
 </body>
 </html>
