--- a/index.html
+++ b/index.html
@@ -1,29 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Jersey+25&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Jersey+25&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="Styles/style.css">
-    7
+
     <title>10 Web game ideas</title>
 </head>
+
 <body>
+
     <div class="first-background">
         <div class="main-background">
-            <h1><span>10</span> <span>web</span> <span>game</span>  <span class="idea-word">ideas</span></h1>
+            <h1><span>10</span> <span>web</span> <span>game</span> <span class="idea-word">ideas</span></h1>
             <p>Created by Ivan Gamez</p>
             <button><i class="fa-regular fa-circle-down" style="color: #ffffff;"></i></button>
         </div>
     </div>
-    <div class="first-background">
-        <div class="main-background">
-            <h1><span>10</span> <span>web</span> <span>game</span>  <span class="idea-word">ideas</span></h1>
-            <p>Created by Ivan Gamez</p>
+
+    <section>
+        <h2>Chose your game:</h2>
+        <div class="buttons-area">
+
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
             <button></button>
         </div>
-    </div>
+       
+        <button></button>
+        <div class="line-bottom"></div>
+
+    </section>
+
+    <footer>
+        <h3> You want to know more about me:</h3>
+        <div class="socials-area">
+            <h4>My socials</h4>
+            <div class="social-buttons">
+                <button><a href=""></a></button>
+                <button><a href=""></a></button>
+                <button><a href=""></a></button>
+                <button><a href=""></a></button>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
